Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-87947

Basic::ComboBox::test_comboBoxSelectTextByMouse() fails on macOS

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 6.0.0 RC
    • 6.0
    • Quick: Controls 2
    • None
    • 5077eb43476b5a4e1bf96db9a37838f934fc036a (qt/qtdeclarative/dev)

    Description

      agent:2020/10/27 02:48:19 build.go:379: FAIL!  : tst_controls::Basic::ComboBox::test_comboBoxSelectTextByMouse() Compared values are not the same
      agent:2020/10/27 02:48:19 build.go:379:    Actual   (): 
      agent:2020/10/27 02:48:19 build.go:379:    Expected (): Some text
      agent:2020/10/27 02:48:19 build.go:379:    Loc: [/Users/qt/work/qt/qtquickcontrols2/tests/auto/controls/data/tst_combobox.qml(1941)]
      

      https://codereview.qt-project.org/c/qt/qtquickcontrols2/+/319008

      https://testresults.qt.io/logs/qt/qtquickcontrols2/ab9bc68d38a01a800828da397af0d3bac10327db/MacOSMacOS_10_14x86_64MacOSMacOS_10_14x86_64Clangqtci-macos-10.14-x86_64-8d411aUseLegacyInstructions/e79e5e85683c69d99d77a645bd597fb10beb4a39/test_1603765140/log.txt.gz

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            srutledg Shawn Rutledge
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes